hphp/hack/test/typecheck/variadics/duplicate_promoted_variadic.php
<?hh

class C {
  private vec<int> $args;
  public function __construct(private int... $args) { }
}
